@@ -1,3 +1,14 @@
+2004-02-04  David Hyatt  <hyatt@apple.com>
+
+	Fix a regression in the line-height of first-lines and inline-blocks.
+	
+        Reviewed by darin
+
+        * khtml/rendering/render_flow.cpp:
+        (RenderFlow::lineHeight):
+        * khtml/rendering/render_text.cpp:
+        (RenderText::lineHeight):
+
 2004-02-02  Chris Blumenberg  <cblu@apple.com>
 
 	Fixed: <rdar://problem/3546924>: REGRESSION: dragging text or images over a WebView is jerky
